--- a/lang/pgc-la.po
+++ b/lang/pgc-la.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Plugins Garbage Collector\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-12-28 23:10+0700\n"
+"POT-Creation-Date: 2010-07-01 21:29+0700\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Vladimir <vladimir@shinephp.com>\n"
 "Language-Team: ShinePHP.com <vladimir@shinephp.com>\n"
@@ -18,227 +18,236 @@ msgstr ""
 
 #: ../pgc-options.php:55
 msgid "Turn on at least one Search checkbox before start Scan process!"
-msgstr "Seleziona almeno una casella di ricerca prima di Esaminare!"
+msgstr "Selige minimum unus consectationis spatium antequam indagare!"
 
 #: ../pgc-options.php:59
+#: ../s123/pgc-options.php:59
 msgid "Scanning"
-msgstr "Per esaminare"
+msgstr "Ut indaget"
 
 #: ../pgc-options.php:63
+#: ../s123/pgc-options.php:63
 msgid "will take some time. Please confirm to continue"
-msgstr "ci vorrà un po\\' di tempo. Per favore conferma per continuare"
+msgstr "paulum temporem auferet. Quaeso confirmas ut continuet"
 
 #: ../pgc-options.php:86
+#: ../s123/pgc-options.php:82
 msgid "Select at least one table before click on Delete button"
-msgstr "Seleziona almeno una tabella prima di cliccare sul tasto Elimina"
+msgstr "Selige minimum una tabula antequam premere in iussum Tabulas dele"
 
 #: ../pgc-options.php:89
+#: ../s123/pgc-options.php:85
 msgid "Delete database tables last confirmation: Click \"Cancel\" if you have any doubt."
-msgstr "Ultima conferma per l\\'eliminazione delle tabelle del database: Clicca \"Cancella\" se hai qualche dubbio."
+msgstr "\"Tabulas dele\" ultima confirmatio: preme \"Dissolve\" si dubia habes."
 
 #: ../pgc-options.php:99
 msgid "Search DB for tables created by plugins"
-msgstr "Cerca nel DB le tabelle create dai plugin"
+msgstr "Tabulas pluginibus creatas in DB indaga"
 
 #: ../pgc-options.php:100
 msgid "Search none-WP tables"
-msgstr "Cerca le tabelle non-WP"
+msgstr "non-WP tabulas quaere"
 
 #: ../pgc-options.php:103
 msgid "Search DB for changes which plugins made to the original WP tables structure"
-msgstr "Cerca nel DB cambiamenti fatti dai plugin alla struttura originale delle tabelle WP "
+msgstr " WP tabularum commutationes pluginibus factae in DB indaga"
 
 #: ../pgc-options.php:104
 msgid "Search WP tables structure changes (beta - experimental)"
-msgstr "Cerca cambiamenti nella struttura delle tabelle WP (beta - sperimentale)"
+msgstr "Commutationes in WP tabularum structura indaga (beta - non paratus)"
 
 #: ../pgc-options.php:107
 msgid "Include tables which are hidden by your request to the search results"
-msgstr "Includi le tabelle che hai deciso di nascondere dai risultati di ricerca"
+msgstr "Adde tabulas quae ex investigationis exitu abdere statuisti"
 
 #: ../pgc-options.php:108
 msgid "Show hidden tables"
-msgstr "Mostra tabelle nascoste"
+msgstr "Abditas tabulas monstra"
 
 #: ../pgc-options.php:112
 #: ../plugins-garbage-collector.php:88
+#: ../s123/pgc-options.php:97
 msgid "Scan"
-msgstr "Esamina"
+msgstr "Indaga"
 
 #: ../pgc-options.php:112
 msgid "Click this button to gather information how plugins use your WordPress database"
-msgstr "Clicca questo pulsante per raccogliere informazioni su come i pulgin utilizzano il tuo database WordPress"
+msgstr "Preme ut explicationes de quomodo pluginibus tuum DB adhibent conferant"
 
 #: ../pgc-options.php:127
 msgid "About this Plugin:"
-msgstr "Riguardo a questo plugin:"
+msgstr "De hoc plugine (Plugin, is)"
 
 #: ../pgc-options.php:128
 msgid "Author's website"
-msgstr "Sito web dell'autore"
+msgstr "Artificis pagina in rete"
 
 #: ../pgc-options.php:129
 msgid "Plugin webpage"
-msgstr "Pagina web del plugin"
+msgstr "Pluginis (Plugin, is) pagina in rete"
 
 #: ../pgc-options.php:130
 #: ../plugins-garbage-collector.php:98
 msgid "Changelog"
-msgstr "Changelog"
+msgstr "Commutationes"
 
 #: ../pgc-options.php:131
 msgid "FAQ"
-msgstr "FAQ"
+msgstr "Frequentes Percontationes"
 
 #: ../pgc-options.php:132
 msgid "Donate"
-msgstr "Fai una donazione"
+msgstr "Dona"
 
 #: ../pgc-options.php:135
 msgid "Greetings:"
-msgstr "Ringraziamenti:"
+msgstr "Gratiae:"
 
 #: ../pgc-options.php:137
 msgid "It's me, the author"
-msgstr "Sono io, l'autore"
+msgstr "Artifex sum"
 
 #: ../pgc-options.php:138
-msgid "For the help with Czech translation"
-msgstr "Per l'aiuto con la traduzione in Ceco"
+msgid "For the help with Chech translation"
+msgstr "Propter auxilium Ceca (Ceca, ae = Chech) conversione"
 
 #: ../pgc-options.php:139
 msgid "For the help with French translation"
-msgstr "Per l'aiuto con la traduzione in Francese"
+msgstr "Propter auxilium Gallica conversione"
 
 #: ../pgc-options.php:140
 msgid "For the help with German translation"
-msgstr "Per l'aiuto con la traduzione in Tedesco"
+msgstr "Propter auxilium Germanica conversione"
 
 #: ../pgc-options.php:141
 msgid "For the help with Indonesian translation"
-msgstr "Per l'aiuto con la traduzione Indonesiana"
+msgstr "Propter auxilium Indonesiana conversione"
 
 #: ../pgc-options.php:142
 msgid "For the help with Italian translation"
-msgstr "Per l'aiuto con la traduzione in Italiano"
+msgstr "Propter auxilium Italiciana conversione"
 
 #: ../pgc-options.php:143
 msgid "For the help with Japanese translation"
-msgstr "Per l'aiuto con la traduzione in Giapponese"
+msgstr "Propter auxilium Giaponensis (Giaponensis, e = Japanese) conversione"
 
 #: ../pgc-options.php:144
 msgid "For the help with Spanish translation"
-msgstr "Per l'aiuto con la traduzione in Spagnolo"
+msgstr "Propter auxilium Iberica conversione"
 
 #: ../pgc-options.php:146
 msgid "Do you wish to see your name with link to your site here? You are welcome! Your help with translation and new ideas are very appreciated."
-msgstr "Vorresti vedere il tuo nome con il link al tuo sito qui? Sei il benvenuto! Il tuo aiuto con la traduzione e nuove idee sono molto apprezzate."
+msgstr "Tuum nomen cum colligatione ad situ tuo videre visne? Salve! Novi consilii et conversione auxilium probatissimi sunt."
 
 #: ../pgc-options.php:148
 msgid "More plugins from"
-msgstr "Altri pulgin di"
+msgstr "Alii plugines ex"
+
+#: ../pgc-options.php:161
+#: ../pgc-options.php:178
+msgid "No items found."
+msgstr "Nihil inventus est."
+
+#: ../pgc-lib.php:252
+#: ../pgc-lib.php:379
+msgid "Hide"
+msgstr "Abde"
+
+#: ../pgc-lib.php:253
+#: ../pgc-lib.php:380
+#: ../s123/pgc-options.php:108
+msgid "Table Name"
+msgstr "Tabulae nomen"
 
 #: ../pgc-lib.php:254
-#: ../pgc-lib.php:381
-msgid "Hide"
-msgstr "Nascondi"
-
-#: ../pgc-lib.php:255
-#: ../pgc-lib.php:382
-msgid "Table Name"
-msgstr "Nome della tabella"
-
-#: ../pgc-lib.php:256
+#: ../s123/pgc-options.php:109
 msgid "Records #"
 msgstr "Record #"
 
-#: ../pgc-lib.php:257
+#: ../pgc-lib.php:255
+#: ../s123/pgc-options.php:110
 msgid "KBytes #"
 msgstr "KB #"
 
-#: ../pgc-lib.php:258
-#: ../pgc-lib.php:384
+#: ../pgc-lib.php:256
+#: ../pgc-lib.php:382
+#: ../s123/pgc-options.php:111
 msgid "Plugin Name"
-msgstr "Nome del plugin"
+msgstr "Pluginis Nomen"
 
-#: ../pgc-lib.php:259
-#: ../pgc-lib.php:385
-msgid "Plugin State"
-msgstr "Stato del plugin"
-
-#: ../pgc-lib.php:267
-msgid "Let's see what tables in your database do not belong to the core WordPress installation:"
-msgstr "Guarda quali tabelle nel tuo database non appartengono al core di WordPress:"
-
-#: ../pgc-lib.php:347
-#: ../pgc-lib.php:548
-msgid "Some tables are hidden by you. Turn on \"Show hidden DB tables\" option and click \"Scan\" button again to show them."
-msgstr "Hai nascosto alcune tabelle. Seleziona l'opzione \"Mostra tabelle nascoste DB\" e clicca nuovamente il pulsante \"Esamina\" per mostrarle."
-
-#: ../pgc-lib.php:355
-msgid "Delete Tables"
-msgstr "Elimina Tabelle"
-
-#: ../pgc-lib.php:359
-#: ../pgc-lib.php:560
-msgid "Attention!"
-msgstr "Attenzione!"
-
-#: ../pgc-lib.php:360
-msgid "Operation rollback is not possible. Consider to make database backup first. Please double think before click <code>Delete Tables</code> button."
-msgstr "Non è possibile tornare indietro. Prima, considera di effettuare il backup del database. Per favore, pensaci due volte prima di cliccare sul bottone <code>Elimina Tabelle</code>."
-
-#: ../pgc-lib.php:369
-msgid "Congratulations! It seems that your WordPress database is clean."
-msgstr "Congratulazioni! Sembra che il tuo database wordpress sia pulito."
-
+#: ../pgc-lib.php:257
 #: ../pgc-lib.php:383
+#: ../s123/pgc-options.php:112
+msgid "Plugin State"
+msgstr "Pluginis Status"
+
+#: ../pgc-lib.php:265
+#: ../s123/pgc-options.php:119
+msgid "Let's see what tables in your database do not belong to the core WordPress installation:"
+msgstr "Inspice in DB tabulas quae cordi non sunt."
+
+#: ../pgc-lib.php:345
+#: ../pgc-lib.php:546
+msgid "Some tables are hidden by you. Turn on \"Show hidden DB tables\" option and click \"Scan\" button again to show them."
+msgstr "Hai nascosto alcune tabelle. Seleziona l'opzione \"Mostra tabelle nascoste DB\" e clicca nuovamente il pulsante \"Esamina\" per mostrarle.Aliquas tabulas abdidisti. Selige optionem \"Abditas tabulas monstra\" et preme \"Indaga\" rursum ut tabulas monstret."
+
+#: ../pgc-lib.php:353
+#: ../s123/pgc-options.php:196
+msgid "Delete Tables"
+msgstr "Tabulas dele"
+
+#: ../pgc-lib.php:357
+#: ../pgc-lib.php:558
+#: ../s123/pgc-options.php:200
+msgid "Attention!"
+msgstr "Animi attentio!"
+
+#: ../pgc-lib.php:358
+#: ../s123/pgc-options.php:200
+msgid "Operation rollback is not possible. Consider to make database backup first. Please double think before click <code>Delete Tables</code> button."
+msgstr "Retro redire non potest. Antea, DB imitationem efficere animadverte. Quaeso, iterum cogita antequam premere <code>Tabulas dele</code>."
+
+#: ../pgc-lib.php:367
+#: ../s123/pgc-options.php:210
+msgid "Congratulations! It seems that your WordPress database is clean."
+msgstr "Gratulationes! Tuum DB politus est."
+
+#: ../pgc-lib.php:381
 msgid "Extra Field"
-msgstr "Campo Extra"
+msgstr "Extra campus"
 
-#: ../pgc-lib.php:556
+#: ../pgc-lib.php:554
 msgid "Delete Extra Columns"
-msgstr "Elimina Colonne Extra"
+msgstr "Extra columnae dele"
 
-#: ../pgc-lib.php:561
+#: ../pgc-lib.php:559
 msgid "Operation rollback is not possible. Consider to make database backup first. Please double think before click <code>Delete Extra Columns</code> button."
-msgstr "Non è possibile tornare indietro. Prima, considera di effettuare il backup del database. Per favore, pensaci due volte prima di cliccare sul bottone <code>Elimina Colonne Extra</code>."
+msgstr "Retro redire non potest. Antea, DB imitationem efficere animadverte. Quaeso, iterum cogita antequam premere <code>Extra columnas dele</code>."
 
-#: ../pgc-lib.php:570
+#: ../pgc-lib.php:568
 msgid "Congratulations! It seems that your WordPress database tables structure is not changed"
-msgstr "Congratulazioni! Sembra che la struttura delle tabelle del tuo database WordPress non sia cambiata"
+msgstr "Gratulationes! Tuum DB tabularum structura non mutatur"
 
-#: ../pgc-lib.php:583
+#: ../pgc-lib.php:581
 msgid "This feature is still in production and will be realized in the next version"
-msgstr "Questa funzionalità è ancora in fase di sviluppo e sarà realizzata nella prossima versione"
-
-#: ../pgc-lib.php:605
-#: ../pgc-lib.php:620
-msgid "No items found."
-msgstr "Non sono stati trovati oggetti."
-
-#: ../pgc-lib.php:608
-msgid "Recent Posts:"
-msgstr ""
+msgstr "Hic proprium adhuc in progressione est et in proximo numero perfecerit"
 
 #: ../plugins-garbage-collector.php:41
 msgid "Plugins Garbage Collector"
-msgstr "Plugins Garbage Collector"
+msgstr "Pluginum Purgamenta Conferens"
 
 #: ../plugins-garbage-collector.php:43
-msgid " requires WordPress 3.0 or newer."
-msgstr "richiede WordPress 3.0 o superiore."
+msgid " requires WordPress 2.9 or newer."
+msgstr "WordPress 2.9 aut superior postulas."
 
 #: ../plugins-garbage-collector.php:43
 msgid "Please update!"
-msgstr "Per favore, aggiorna!"
+msgstr "quaeso renova!"
 
-#~ msgid ""
-#~ "Click &lt;Scan&gt; to gather information how plugins use your WordPress "
-#~ "database"
-#~ msgstr ""
-#~ "Clicca &lt;Esamina&gt; per raccogliere informazioni su come i plugin "
-#~ "utilizzano il tuo database WordPress"
+#: ../s123/pgc-options.php:93
+msgid "Click &lt;Scan&gt; to gather information how plugins use your WordPress database"
+msgstr "Preme &lt;Indaga&gt; ut explicationes de quomodo pluginibus tuum DB adhibent conferant"
+
 #~ msgid "Cleanup: please confirm to continue"
 #~ msgstr "Ripulire: per favore conferma per continuare"
 
